# icarus

./: .gitignore  Cargo.toml  LINKAGE.md  LINKAGE_IMPLEMENTATION.md  PLANNING.md  README.md
midi/: 02_SA_Emo Lofi Piano_Saxophone_Bm_bpm.mid  02_Street Anthems_Bm_146bpm_Choir.mid  09_Rocket Talk_F#m_142bpm_Synth Keys.mid  16_Scary Nights_Dm_140bpm_Bells.mid  CLIK_05_142BPM_Dm_Guitar.mid  Forget_HiHat_155bpm.mid  Future Samples_Jazz Cafe_Loop 40_85 BPM_F.mid  Kalimbas.mid  MHM_05_Snare Roll_140_F#m.mid  PJB_149BPM_New_Leaf_Synth_Pad_D#m.mid  RS_VAH1_Kit2_drop_loop_piano2_dry_122bpm_Em.mid  RS_VAH1_Kit3_drop_loop_lead_dry_123bpm_Bm.mid  RS_VAH1_Kit3_drop_loop_stomp_123bpm_Bm.mid  RS_VAH1_Kit5_break_loop_pad_122bpm_Am.mid  RS_VAH1_Kit5_buildup_loop_lead_dry_122bpm_Am.mid  RS_VAH1_Kit5_drop_loop_lead_dry_122bpm_Am.mid  SS_BV2_Bellakiar_104_G#min_Piano.mid  Salazar_145BPM_ Vocals_F#m.mid  Tears of Love_140bpm_Guitar Chord_G#m.mid  Valentino_HiHat_150bpm.mid
src/: analysis.rs  audio.rs  lib.rs  main.rs  midi_layer.rs  objects.rs  transcription.rs
