[package]
name = "icarus"
version = "0.1.0"
edition = "2024"
description = "Laser + projector projection software"

[dependencies]
nannou = "0.19"
nannou_laser = "0.19"
cpal = "0.17"
realfft = "3.5"
spectrum-analyzer = "1"
fundsp = "0.19"
dasp = { version = "0.11", features = ["ring_buffer", "signal"] }
ringbuf = "0.2"
hound = "3.5"
midly = "0.5"
